fixing CI tests